fix(test): refactor code for test remove wait